# SAPHRON

./: .gitignore  CMakeLists.txt
include/: schema.h
project/: LiquidCrystall.cpp  gb_no_skin.json  lj.json  sys1.json  sys1_Langevin.json  sys1_lg.json  sys1_mc.json  sys2.json  sys2_mc.json
project/DefectTrain/: generate_defect.r  ll_sys625_lg.json  save1_defect.json  test_defect.json
project/StochasticResonance/: commands  free_hedgehog.json  free_hedgehog_large_mc.json  free_hedgehog_small_mc.json  free_planar_square.json  generate_state.r  generate_vtk.r  lattice_sys5_lg.json  lattice_sys5_mc.json  lattice_sys6_lg.json  lattice_sys6_mc.json  lattice_sys7_lg.json  ll_sys625_lg.json  ll_sys625_mc.json  plot.r  postprocess.r  preprocess.r  sys1_mc.json  sys2_mc.json  sys3_mc.json  sys3_position.json  sys3_position_art_escaping.json  sys4_mc.json  sys4_mc.json~  sys4_position.json  sys4_position.json~  sys5_mc.json  sys_n_2500_beta_0.5.json  sys_n_625_beta_0.5.json  test_move.json
schema/constraints/: hedgehog.constraint.json  periodicpotential.constraint.json  planarsquare.constraint.json
schema/forcefields/: forcefields.json
schema/simulation/: simulation.json
src/: config.h.in
src/Connectivities/: DLSAConnectivity.h  P2SAConnectivity.h  P2SFAConnectivity.h
src/Constraints/: Constraint.cpp  Constraint.h  DirectorRestrictionC.h  HedgehogC.h  PasquaMembraneC.h  PeriodicPotentialC.h  PeriodicPotentialC_old.h  PlanarSquareC.h
src/DensityOfStates/: ElasticCoeffOP.h  ParticleDistanceOP.h  RgOP.h
src/ForceFields/: ForceField.cpp  ForceField.h  ForceFieldManager.cpp  ForceFieldManager.h  GayBerneFF.h  LebwohlLasherFF.h  LennardJonesFF.h
src/JSON/: schema.cpp
src/Moves/: Move.cpp  Move.h  RotateMove.h  TranslateMove.h  TranslatePrimitiveMove.h
src/Observers/: ConsoleObserver.cpp  DLMFileObserver.cpp  XYZObserver.cpp
src/Particles/: Particle.cpp  Particle.h  ParticleEvent.h
src/Properties/: EPTuple.h  Pressure.h  Vector2D.h
src/Simulation/: LangevinSimulation.cpp  LangevinSimulation.h  MonteCarloSimulation.cpp  MonteCarloSimulation.h  MonteSimulation.h  SimBuilder.cpp  SimEvent.h  SimObserver.cpp  Simulation.cpp  StandardSimulation.cpp  StandardSimulation.h
src/Utils/: Helpers.h  Rand.h
src/Worlds/: World.cpp  World.h
